package cmexample1domain.requestinterface;

message Foo {
    optional string fsipNetworkObjectName = 1;
    optional string fsipNetworkObjectOwner = 2;
    optional string fsipNetworkObjectAddPhase = 3;
    optional string fsipNetworkObjectDelPhase = 4;
    optional string fsipNetworkObjectPriority = 5;
    optional string fsipNetworkObjectDynamic = 6;
    optional string fsipACLRuleIndex = 7;
    optional string fsipACLRuleChain = 8;
    optional string fsipACLRuleAction = 9;
    optional string fsipACLRuleTable = 10;
    optional string fsipACLRuleFamily = 11;
    optional string fsipACLRuleDSCP = 12;
    optional string fsipACLRuleInInterface = 13;
    optional string fsipACLRuleOutInterface = 14;
    optional string fsipACLRuleProtocol = 15;
    optional string fsipACLRuleSrcPortStart = 16;
    optional string fsipACLRuleDstPortStart = 17;
    optional string fsipACLRuleSrcPortEnd = 18;
    optional string fsipACLRuleDstPortEnd = 19;
    optional string fsipACLRuleSrc = 20;
    optional string fsipACLRuleDst = 21;
    optional string fsipACLRuleSrcLength = 22;
    optional string fsipACLRuleDstLength = 23;
    optional string fsipACLRuleActionDSCP = 24;
    optional string fsipACLRuleVRF = 25;
    optional string fsipACLRuleICMPType = 26;
    optional string fsipACLRuleICMPCode = 27;
    optional string fsipACLRuleLimit = 28;
    optional string fsipACLRuleLimitBurst = 29;

    optional string fsipNetworkObjectPostDelCmd = 40; 
    optional string fsipNetworkObjectNodeName = 42;
    optional string fsipNetworkObjectUserModifiable = 48;
    optional string fsipNetworkObjectUserDeletable = 49;
    optional string fsipNetworkObjectUser = 50;
    optional string fsipNetworkObjectDependency = 51;
    optional string fsipNetworkObjectPreAddCmd = 52;
    optional string fsipNetworkObjectPostAddCmd = 53;
    optional string fsipNetworkObjectPreDelCmd = 54;
    optional string objectClass = 55;
    optional string key = 56;
    
    optional int32 id = 100;
    optional string description = 101;
    repeated string value = 102;
}
